--- a/src/styles/editor.less
+++ b/src/styles/editor.less
@@ -113,6 +113,10 @@
     & > .a0-icon-button {
         flex: 1 1 auto;
 
+        &:before {
+            vertical-align: top;
+        }
+
         &.-arrow-below {
             position: relative;
 
