--- a/src/styles/secretsEditor.less
+++ b/src/styles/secretsEditor.less
@@ -69,7 +69,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
 
     & > .a0-icon-button {
         flex: 0 0 auto;
